--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,9 @@
 	{gen_leader, ".*",
 		{git, "https://github.com/garret-smith/gen_leader_revival.git", "HEAD"}},
 	{bertconf, ".*",
-		{git, "https://github.com/Tapklik/bertconf.git", {branch, "master"}}}
+		{git, "https://github.com/Tapklik/bertconf.git", {branch, "master"}}},
+	{rmq, ".*",
+		{git, "git@bitbucket.org:tapklikbackenddevs/rmq.git",  {branch,"master"}}}
 ]}.
 
 {plugins, [
